# hedge-seg

./: LICENSE  README.md  pyproject.toml
docs/: descriptions.md  method.md
exps/: basic_data.py  parametric_line.py  pidinet_edge_detector.py
hedge_seg/: data.py  embeddings_and_pack.py  format_utils.py  label_postprocess.py  polyline_utils.py  training_data.py  training_utils.py  utils.py  visualization.py
scripts/: build_training_data.py  generate_training_data.py  process_labels.py  train_detr_df.py  train_detr_dino.py  train_detr_dino_polyline.py  train_hf_detr.py  train_neg_pos_classifier.py
slurm/: snellius_detr_polyline.sh
tests/: test_training_data.py
veg_outline/: data.py
